force-app/main/default/objects/Machine_and_Tools__c/Machine_and_Tools__c.object-meta.xml
<CustomObject>
    <description>How many Machines will you need for this project?</description>
    <label>Machine and Tools</label>
    <nameField>
        <displayFormat>M-{0000}</displayFormat>
        <label>Machine and Tools</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Machine and Tools</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>