force-app/main/default/objects/Machine_and_Tools__c/fields/How_many_machines_you_want_to_use__c.field-meta.xml
<CustomField>
    <fullName>How_many_machines_you_want_to_use__c</fullName>
    <label>How many machines you want to use?</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>