force-app/main/default/objects/Machine_and_Tools__c/fields/Machines_use_on_SIte__c.field-meta.xml
<CustomField>
    <fullName>Machines_use_on_SIte__c</fullName>
    <label>Machines use on Site</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Excavator</fullName>
            </value>
            <value>
                <fullName>Caterpillar</fullName>
            </value>
            <value>
                <fullName>Bulldozer</fullName>
            </value>
            <value>
                <fullName>Explosives</fullName>
            </value>
            <value>
                <fullName>Cranes</fullName>
            </value>
            <value>
                <fullName>Loader</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>