force-app/main/default/objects/Machine_and_Tools__c/fields/Secret_code_to_deploy_machines__c.field-meta.xml
<CustomField>
    <fullName>Secret_code_to_deploy_machines__c</fullName>
    <label>Secret code to deploy machines</label>
    <length>6</length>
    <maskChar>X</maskChar>
    <maskType>all</maskType>
    <type>EncryptedText</type>
</CustomField>